--- a/TccLulu-war/web/WEB-INF/templates/default.xhtml
+++ b/TccLulu-war/web/WEB-INF/templates/default.xhtml
@@ -5,23 +5,27 @@
       xmlns:p="http://primefaces.org/ui"
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
-    <f:view contentType="text/html">
-        <h:head>
-            <f:facet name="first">
-                <meta content='text/html; charset=UTF-8' http-equiv="Content-Type"/>
-                <title>SGCI</title>
-            </f:facet>
-        </h:head>
+ <h:head>
+        <title>SGCI</title>       
+    </h:head>
+    <h:body style="font-size:11px; border: 0px">
+        <p:layout fullPage="true">            
+   
+            <p:layoutUnit position="west" size="210" style="border: 0px">
+                <h:form>
+                    <ui:include src="/menu.xhtml" />
+                </h:form>
+            </p:layoutUnit>
+
+            <p:layoutUnit position="center" style="border: 0px">
+                <ui:insert name="conteudo"/>
+            </p:layoutUnit>
+
+        </p:layout>
 
 
-        <h:body>
-            <h3 style="margin-top:0">SGCI</h3>
-            <ui:insert name="centro">
-            </ui:insert>   
 
-        </h:body>
 
-    </f:view>
+    </h:body>
+
 </html>
-
-
